--- a/src/components/MultiStageForm.css
+++ b/src/components/MultiStageForm.css
@@ -12,7 +12,7 @@ html {
     width: 500vw;
 
     /* Set background image properties */
-    background-image: url('D:\github\cricket-themed-website\as.png');
+    background-image: url('as.png');
     /* Replace with your image path */
     background-size: cover;
     /* Ensures the image covers the full area */
